--- a/clickWaterWave/index.html
+++ b/clickWaterWave/index.html
@@ -29,7 +29,7 @@
         background-image: radial-gradient(circle, #ccc 10%, transparent 10.1%);
         transform: scale(10);
         opacity: 0;
-        transition: all .6s;
+        transition: all 2s;
     }
     .btn:active::after {
         transform: scale(0);
